syntax = "proto3";

option java_multiple_files = true;
option java_package = "auth";

service AuthService{
  rpc ExtractUserIdAndEmail (AuthRequest) returns (AuthResponse);
}

message AuthRequest{
  string token = 1;
}

message AuthResponse{
  string userId = 1;
  string email = 2;
}